--- a/tweet/pom.xml
+++ b/tweet/pom.xml
@@ -27,6 +27,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 		<dependency>
@@ -83,6 +87,7 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>1.1.0.FINAL</version>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
